Implementing SonarQube feedback and fixing Integration Tests